# aws-architecture-failure-detection-system

./: .env.example  .gitignore  AWS_COVERAGE_ANALYSIS.md  AWS_SERVICE_COVERAGE.md  BRUTAL_HONEST_EVALUATION.md  BRUTAL_REVIEW.md  COMPLETE_DOCUMENTATION.md  COMPREHENSIVE_EVALUATION.md  CRITICAL_FIXES_IMPLEMENTED.md  DEEP_ANALYSIS_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DUAL_ANALYSIS_FEATURE.md  Dockerfile  FINAL_ASSESSMENT.md  FINAL_EVALUATION_9.0.md  FINAL_REPORT.md  HF_SPACES_READY.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY_v2.md  MASSIVE_CODEBASE_SUPPORT.md  PERFORMANCE_OPTIMIZATIONS.md  PRODUCTION_GUIDE.py  PRODUCTION_IMPROVEMENTS.md  PRODUCTION_READINESS_ANALYSIS.md  PRODUCTION_TEST_REPORT.md  PUSH_TO_HF.md  README.md  README_HF.md  SETUP_COMPLETE.md  SYSTEM_STATUS.md  TWO_PART_ANALYSIS.md  api_log_backup.txt  app.py  app_hf.py  docker-compose.yml  nginx.conf  push_to_hf.sh  pyproject.toml  requirements-hf.txt  requirements.txt  (+9 more)
agents/: README.md  architecture_agent.py  base_agent.py  deep_analysis_engine.py  deployed_architecture_agent.py  deployed_system_analyzer.py  failure_prediction_agent.py  fresh_deployment_advisor_agent.py  fresh_deployment_agent.py  graph_engine.py  iac_parser.py  incident_reviewer_agent.py  text_to_graph.py
api/: README.md  config.py  exceptions.py  main.py  main_production.py  middleware.py  models.py  resilience.py  routes.py  routes_enhanced.py  security.py
data/: README.md
docs/: architecture.md  design_decisions.md  failure_taxonomy.md  future_roadmap.md
embeddings/: README.md  build_index.py  embedder.py  (+1 more)
(+264 files in other folders)
